EPBDS-6431 Use application.properties in DEMO